# servers

./: README.md
src/sqlite/: README.md  codebase.md  pyproject.toml  test.py  test_callout.py  test_client.py  test_data.csv  test_data_clean.csv  test_marker.py  test_server.py
src/sqlite/.claude/: settings.local.json
src/sqlite/src/mcp_server_sqlite/: __init__.py  __main__.py  analysis_utils.py  config.py  db_handler.py  excel_handler.py  format_report.py  format_ve_audit_report.html  generate_job_report.py  job_obsolescence.py  prompt_templates.py  report_query.sql  server.py  tsa_logic.py  ve_audit.py  ve_logic.py
src/sqlite/src/mcp_server_sqlite/DOTSOCBLS_Excel/: DOT_to_ONET_SOC.xlsx  Occupation_Handbook_to_ONET-SOC.xlsx  Unmatched 2010 SOC Codes.docx  socdotcrosswalk.doc
src/sqlite/src/mcp_server_sqlite/models/: README.md  __init__.py  analysis.py  dot_code.py  dot_job.py
src/sqlite/src/mcp_server_sqlite/prompt_library/: prompt_templates.py  ve_aduit_RAG_only.py  ve_audit_MCP_rag.py  ve_audit_parse_organize.py
src/sqlite/src/mcp_server_sqlite/reference/: 2024_ve_handbook.json  em_24026.json  em_24027.json  hallex_i_2_5_48.json  ssr_82-41.json  ssr_96-8p.json
src/sqlite/src/mcp_server_sqlite/reference_json/: em_21065_rev_2.json  em_job_citation_examples.json  hallex_i-2-5-30.json  hallex_i_2_6_74.json  low_job_number_examples.json  medical_vocational_guidelines.json  medical_vocational_guidelines.md  obsolete_out_dated.json  poms_25005.020_prw.json  poms_25015.019_TSA_Documentation.json  rfc_dot_conflict_examples.json  ssr_00-4p.json  ssr_24-1p.json  (+7 more)
(+9 files in other folders)
